<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchaCake"
    android:background="#E22E6E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/matcha_cake_recipe"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/matcha_foreground"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_cups_all_purpose_flour_n_1_1_2_cups_sugar_n_1_2_cup_unsalted_butter_n_1_cup_milk_n_3_large_eggs_n_3_tbsp_matcha_powder_n_2_tsp_baking_powder_n_1_2_tsp_salt"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preheat_your_oven_to_350_f_175_c_n_cream_the_butter_and_sugar_until_fluffy_n_add_eggs_one_at_a_time_mixing_well_n_stir_in_milk_and_matcha_powder_n_combine_flour_baking_powder_and_salt_add_to_wet_mixture_n_pour_into_greased_pans_and_bake_for_25_30_minutes"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>