<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback"
    android:background="#E22E6E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_our_app"
            android:fontFamily="cursive"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:numStars="5"
            android:stepSize="1"
            android:rating="0"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/editTextReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_cooking_notes_or_review"
            android:inputType="textMultiLine"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:minHeight="100dp"
            android:gravity="top|start"
            android:padding="8dp" />

        <CheckBox
            android:id="@+id/checkBoxShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_feedback_with_the_community"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/cooking_girl_foreground"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_feedback"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:alpha="0.5"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>
