<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe"
    android:background="#E22E6E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/pick_your_cake"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/strawberry_foreground"
                    android:layout_gravity="center"
                    />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:backgroundTint="#B12668"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/strawberry_cake"
                    android:onClick="launchStrawberryCake"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="#ffffff" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/lemon_foreground"
                    android:layout_gravity="center"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:backgroundTint="#D5AE14"
                    android:text="@string/lemon_cake"
                    android:onClick="launchLemonCake"
                    android:textColor="@color/black" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/chocolate_foreground"
                    android:layout_gravity="center"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:alpha="0.7"
                    android:text="@string/chocolate_cakee"
                    android:onClick="launchChocolateCake"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/blueberry_foreground"
                    android:layout_gravity="center"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/blueberry_cake"
                    android:onClick="launchBlueberryCake"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="#ffffff"
                    android:layout_gravity="center"/>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/vanilla"
                    android:layout_gravity="center"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:backgroundTint="#FFFFFF"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/vanilla_cakee"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="#ffffff"
                    android:layout_gravity="center"
                    android:onClick="launchVanillaCake"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/matcha_foreground"
                    android:layout_gravity="center"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:backgroundTint="#49B64F"
                    android:gravity="center"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/matcha_cakee"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="#ffffff"
                    android:onClick="launchMatchaCake"/>


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


</FrameLayout>